feature/IVYPORTAL-18929-Portal-page-title-update
Handle feedback